--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img class="cabeçalho" src="moça.jpg" alt="moça.jpg">
     <header class="cabeçalho">
-        <img class="cabeçalho- imagem" src="figura1.jpg" alt="imagem abstrata tecnologica">
+        <img class="cabeçalho- imagem" src="spa.jpg" alt=spa.jpg">
         <ul class="cabeçalho-imagem-lista-item">
-            <li class="cabecalho-lista-item">Estudante</li>
-            <li class="cabecalho-lista-item">escola</li>
+
+ kauan   dos  santos  silveira  N°23
+            <a href="https://shizendayspa.com.br/?gclid=CjwKCAjwp6CkBhB_EiwAlQVyxSKAC4FS614IvcJVk4rg6VdKIYlftOqQ3t5GpK7iai0RI7myVOnUnxoCPpsQAvD_BwE">link beleza</a>
             <cabecalho-lista-item{ display:inline-block
             }
         </ul>
