--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">House</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">beleza</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Agendamento
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
@@ -44,7 +44,7 @@
       </div>
     </div>
   </nav>
-    <img class="cabeçalho" src="moça.jpg" alt="moça.jpg">
+    <img class="cabeçalho" src="moça2.jpeg" alt="moça2.jpeg">
     <header class="cabeçalho">
         <img class="cabeçalho- imagem" src="spa.jpg" alt=spa.jpg">
         <ul class="cabeçalho-imagem-lista-item">
