--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="nav-link active" aria-current="page" href="#">House</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">beleza</a>
+            <a class="nav-link" href="https://shizendayspa.com.br/?gclid=CjwKCAjwp6CkBhB_EiwAlQVyxSKAC4FS614IvcJVk4rg6VdKIYlftOqQ3t5GpK7iai0RI7myVOnUnxoCPpsQAvD_BwE">beleza</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
