--- a/sessao1.html
+++ b/sessao1.html
@@ -60,7 +60,7 @@
         <strong>Qualidade e conforto que você merece.</strong>
       </div>
     </div>
-  </div>cc
+  </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
