--- a/sessao1.html
+++ b/sessao1.html
@@ -81,11 +81,11 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>promoção 1 dia 280 reais
-                Day relaxante 381 reais
-                Day prana 799reais
-                Glamur day 500 reais
-                candle massage queer 534 reais
+        <strong>promoção 1 dia 280 reais<br>
+                Day relaxante 381 reais<br>
+                Day prana 799reais<br>
+                Glamur day 500 reais<br>
+                candle massage queer 534 reais<br>
             
         </strong> 
       </div>
